Fixed comment disable align, added some tab variants.

--- a/assets/src-frontend/article-blocks/_twrp-ys.scss
+++ b/assets/src-frontend/article-blocks/_twrp-ys.scss
@@ -12,6 +12,7 @@
 	&__title {
 		@extend .twrp-reset-box;
 
+		margin-top: -0.2em;
 		margin-bottom: 0.4rem;
 		color: var(--twrp-text-color);
 	}
